# yunoflow

./: .gitignore  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_p0_core.py  0002_p4_run_events.py  0003_p6_scheduling.py  0004_email_login.py
backend/app/: main.py
backend/app/api/: a2a.py  agents.py  auth.py  channels.py  deps.py  health.py  metrics.py  runs.py  templates.py  tools.py  workflows.py  ws.py
backend/app/channels/: base.py  manager.py  notify.py  router.py  telegram.py
backend/app/core/: config.py  db.py  errors.py  llm.py  logging.py  pricing.py
backend/app/models/: __init__.py  agent.py  base.py  channel_binding.py  console_user.py  message.py  run_event.py  template.py  usage.py  workflow.py  workflow_run.py
backend/app/observability/: mlflow_tracing.py
backend/app/runtime/: builder.py  checkpointer.py  compiler.py  events.py  executor.py  fixed_graph.py  generator.py  state.py
backend/app/scheduling/: dbos_workflows.py  scheduler.py
backend/app/schemas/: agent.py  channel.py  graph.py  run.py  template.py  workflow.py
backend/app/templates/: seed.py
backend/app/tests/: conftest.py  fakes.py  test_agents_api.py  test_auth.py  test_compiler.py  test_executor_events.py  test_generator.py  test_guardrails.py  test_message_delivery.py  test_scheduling.py  test_workflow_exec.py
backend/app/tools/: __init__.py  builtins.py  guardrails.py  payment_mock.py  registry.py
frontend/: .dockerignore  (+7 more)
(+42 files in other folders)
