[project]
name = "yuno-orchestrator"
version = "0.1.0"
description = "AI Agent Orchestration Platform (Yuno challenge)"
requires-python = ">=3.11,<3.13"
dependencies = [
  # --- Web / persistence (P0) ---
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  # --- Runtime (P1/P2) ---
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain-core>=0.3.60,<1.3",
  "langchain-openai>=0.3,<1.0",
  # --- Channel (P1) ---
  "aiogram>=3.20,<4.0",
  # --- Tools (P3) ---
  "httpx>=0.27",
  # --- Scheduling (P3) ---
  "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
# Heavier / gated — installed per-phase to keep the base image lean & stable.
obs  = ["mlflow>=3.0,<4.0"]                 # P4 observability
search = ["ddgs>=6.0"]                      # P3 web_search tool
a2a  = ["a2a-sdk>=0.2"]                     # P5 (gated; API churn)
deep = ["deepagents"]                       # P5 (gated)
dbos = ["dbos"]                             # P6 (gated)
dev  = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "anyio",
  "httpx",
  "respx>=0.21",
  "aiosqlite>=0.20",
  "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
